<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Common String-->
    <string name="app_name">PicSend</string>
    <string name="hello_world">Hello world!</string>
    <string name="valider">Valider</string>
    <string name="sendMail">Send Data</string>


    <!--Menu String-->
    <string name="menu_settings">Settings</string>
    <string name="menu_Photo">Photo</string>
    <string name="menu_exit">Quitter</string>

    <!--Photo Layout String-->
    <string name="photo">Photo</string>
    <string name="next">Add data</string>


    <!--Setting Layout String-->
    <string name="settings">Settings</string>
    <string name="pseudo_Tv">Pseudo : </string>
    <string name="email_Tv">E-Mail  : </string>

    <!--AfterPhoto Layout String-->
    <string name="data">Data</string>
    <string name="comment">Commentaire</string>
    <string name="animal">Animal</string>
    <string name="plante">Plante</string>
    <string name="more50">Hauteur + 50cm</string>
    <string name="less50">Hauteur - 50cm</string>
    <string name="invertebre">Invertébré</string>
    <string name="vertebre">Vertébré</string>


</resources>
