<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/data"
        android:id="@+id/afterphoto_tv_data"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:id="@+id/setting_bt_valider"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="valideData" />

    <RadioGroup
        android:id="@+id/type"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/afterphoto_tv_data"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:clickable="true">


        <RadioButton
            android:id="@+id/rb_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rb_plante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plante"
            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/etat"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/type"
        android:layout_centerHorizontal="true">


        <RadioButton
            android:id="@+id/rb_etat_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invertebre"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rb_etat_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertebre"
            />

    </RadioGroup>
</RelativeLayout>
