<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings"
        android:id="@+id/setting_tv_settings"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pseudo_Tv"
        android:id="@+id/setting_tv_pseudo"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email_Tv"
        android:id="@+id/setting_tv_email"
        android:layout_below="@+id/setting_tv_pseudo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_et_pseudo"
        android:maxLength="150"
        android:maxWidth="150dp"
        android:layout_above="@+id/setting_tv_email"
        android:layout_toRightOf="@+id/setting_tv_pseudo"
        android:layout_toEndOf="@+id/setting_tv_pseudo"
        android:layout_alignParentRight="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_et_email"
        android:maxLength="150"
        android:maxWidth="150dp"
        android:layout_alignBottom="@+id/setting_tv_email"
        android:layout_alignLeft="@+id/setting_et_pseudo"
        android:layout_alignStart="@+id/setting_et_pseudo"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:id="@+id/setting_bt_valider"
        android:layout_centerHorizontal="true"
        android:onClick="valideSetting"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/setting_et_email"
        />

</RelativeLayout>
