<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TagActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/data"
            android:id="@+id/afterphoto_tv_data"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendMail"
            android:id="@+id/sendMail"
            android:onClick="validData"
            android:layout_marginBottom="25dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner01"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:layout_marginTop="68dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/afterphoto_tv_data" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner02"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spinner01" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner03"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spinner02" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner04"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spinner03" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner05"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spinner04" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/comment"
            android:id="@+id/comment"
            android:layout_below="@+id/afterphoto_tv_data"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tag_ed_comment"
            android:maxLength="150"
            android:maxWidth="150dp"
            android:layout_below="@+id/comment"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

</RelativeLayout>
